; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_dbus-manager.c_method_clean_unit.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_dbus-manager.c_method_clean_unit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bus_unit_method_clean = common dso_local global i32 0, align 4
@GENERIC_UNIT_LOAD = common dso_local global i32 0, align 4
@GENERIC_UNIT_VALIDATE_LOADED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32*)* @method_clean_unit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @method_clean_unit(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = load i32, i32* @bus_unit_method_clean, align 4
  %11 = load i32, i32* @GENERIC_UNIT_LOAD, align 4
  %12 = load i32, i32* @GENERIC_UNIT_VALIDATE_LOADED, align 4
  %13 = or i32 %11, %12
  %14 = call i32 @method_generic_unit_operation(i32* %7, i8* %8, i32* %9, i32 %10, i32 %13)
  ret i32 %14
}

declare dso_local i32 @method_generic_unit_operation(i32*, i8*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
